Add sponsors to the footer

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@
 		{% include _pricetable-home.html %}
 		{% include _team-home.html %}
     {% include _host.html %}
+    {% include _sponsors-footer.html %}
     {% include _footer.html %}
     {% include _js-site.html %}
 </html>
