Add sponsors footer to multiple layout files
Included the sponsors footer in various layout files to ensure consistent display across the site. Adjusted formatting for better readability and removed unnecessary whitespace.

--- a/_layouts/conduct.html
+++ b/_layouts/conduct.html
@@ -8,8 +8,9 @@
                 {{ content }}
             </div>
         </div>
-       
+
+        {% include _sponsors-footer.html %}
         {% include _footer.html %}
-        {% include _js-site.html %} 
+        {% include _js-site.html %}
     </body>
 </html>
