--- a/_layouts/detail-edition.html
+++ b/_layouts/detail-edition.html
@@ -3,6 +3,7 @@
     {% include _head.html %}
     <body>
         {{ content }}
+        {% include _sponsors-footer.html %}
         {% include _footer.html %}
-        {% include _js-site.html %} 
-</html> 
+        {% include _js-site.html %}
+</html>
