--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -6,7 +6,8 @@
         <div class="container pb-5 mb-5">
             {{ content }}
         </div>
-       
+
+        {% include _sponsors-footer.html %}
         {% include _footer.html %}
-        {% include _js-site.html %} 
+        {% include _js-site.html %}
 </html>
