--- a/_layouts/schedule-detail.html
+++ b/_layouts/schedule-detail.html
@@ -170,6 +170,7 @@
             </div>
          </div>
     </div>
+    {% include _sponsors-footer.html %}
     {% include _footer.html %}
     {% include _js-site.html %}
 
