--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -4,6 +4,7 @@
     <body>
         {% include _nav-solid.html %}
         {{ content }}
+        {% include _sponsors-footer.html %}
         {% include _footer.html %}
-        {% include _js-site.html %} 
+        {% include _js-site.html %}
 </html>
