--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -5,8 +5,9 @@
         {% include _nav.html %}
         {% include _hero-workshops.html %}
         {{ content }}
+        {% include _sponsors-footer.html %}
         {% include _footer.html %}
-        {% include _js-site.html %} 
+        {% include _js-site.html %}
     </body>
 </html>
 
