--- a/_layouts/speakers.html
+++ b/_layouts/speakers.html
@@ -6,8 +6,9 @@
     {% include _nav-solid.html %}
 
     {% include _speakers.html %}
-   
+
     {% include _host.html %}
+    {% include _sponsors-footer.html %}
     {% include _footer.html %}
     {% include _js-site.html %}
 
