--- a/_layouts/workshops-detail.html
+++ b/_layouts/workshops-detail.html
@@ -155,6 +155,7 @@
         </div>
     </div>
 
+    {% include _sponsors-footer.html %}
     {% include _footer.html %}
     {% include _js-site.html %}
 </body>
