Remove sponsors hero section from schedule and workshops pages; add it to their respective layouts for consistent display.

--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -3,6 +3,7 @@
     {% include _head.html %}
     <body>
         {% include _nav-solid.html %}
+        {% include _sponsors-hero.html %}
         {{ content }}
         {% include _sponsors-footer.html %}
         {% include _footer.html %}
