--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -4,6 +4,7 @@
     <body>
         {% include _nav.html %}
         {% include _hero-workshops.html %}
+        {% include _sponsors-hero.html %}
         {{ content }}
         {% include _sponsors-footer.html %}
         {% include _footer.html %}
