--- a/_sass/_user-styles.scss
+++ b/_sass/_user-styles.scss
@@ -699,17 +699,21 @@ th {
 }
 
 .org-feature-logo-big {
-    max-width: 180px;
     max-height: 80px;
     width: auto;
     height: 80px;
 }
 
-.org-feature-logo-small {
-    max-width: 100px;
-    max-height: 40px;
+.org-feature-logo-medium {
+    max-height: 50px;
     width: auto;
-    height: 40px;
+    height: 50px;
+}
+
+.org-feature-logo-small {
+    max-height: 30px;
+    width: auto;
+    height: 30px;
 }
 
 .org-features-footer .org-feature-logo {
