--- a/_includes/_pricetable-home.html
+++ b/_includes/_pricetable-home.html
@@ -25,8 +25,8 @@
             <span class="fw-normal mb-3 d-block"><s>Price ends on May 29.</s></span>
         </th>
         <th style="width: 20%;">
-            <h4 class="text-uppercase mb-0 mt-2">Standard</h4>
-            <span class="fw-normal mb-3 d-block">Price ends on August 12.</span>
+            <h4 class="text-uppercase mb-0 mt-2"><s>Standard</s></h4>
+            <span class="fw-normal mb-3 d-block"><s>Price ends on August 12.</s></span>
         </th>
         <th style="width: 20%;">
             <h4 class="text-uppercase mb-0 mt-2">Late Bird</h4>
@@ -39,15 +39,15 @@
           <th scope="row" class="text-start">Conference ticket</th>
           <td class="inactive"><s>CHF 750</s></td>
           <td class="inactive"><s>CHF 850</s></td>
-          <td class="active">CHF 950</td>
-          <td class="inactive">CHF 1050</td>
+          <td class="inactive"><s>CHF 950</s></td>
+          <td class="active">CHF 1050</td>
         </tr>
         <tr>
           <th scope="row" class="text-start">Workshop ticket</th>
           <td class="align-middle inactive"><s>CHF 600</s></td>
           <td class="align-middle inactive"><s>CHF 700</s></td>
-          <td class="align-middle active">CHF 800</td>
-          <td class="align-middle inactive">CHF 900</td>
+          <td class="align-middle inactive"><s>CHF 800</s></td>
+          <td class="align-middle active">CHF 900</td>
         </tr>
       </tbody>
 
@@ -56,22 +56,22 @@
           <th scope="row" class="text-start">Bundle (Conference + Workshop) ticket</th>
           <td class="align-middle inactive"><s>CHF 1200</s></td>
           <td class="align-middle inactive"><s>CHF 1395</s></td>
-          <td class="align-middle active">CHF 1490</td>
-          <td class="align-middle inactive">CHF 1755</td>
+          <td class="align-middle inactive"><s>CHF 1490</s></td>
+          <td class="align-middle active">CHF 1755</td>
         </tr>
         <tr>
           <th scope="row" class="text-start">Student Conference Ticket</th>
           <td class="align-middle inactive"><s>CHF 400</s></td>
           <td class="align-middle inactive"><s>CHF 400</s></td>
+          <td class="align-middle inactive"><s>CHF 400</s></td>
           <td class="align-middle active">CHF 400</td>
-          <td class="align-middle inactive">CHF 400</td>
         </tr>
         <tr>
           <th scope="row" class="text-start">One-Day Conference Ticket</th>
           <td class="align-middle inactive"><s>CHF 560</s></td>
           <td class="align-middle inactive"><s>CHF 560</s></td>
+          <td class="align-middle inactive"><s>CHF 560</s></td>
           <td class="align-middle active">CHF 560</td>
-          <td class="align-middle inactive">CHF 560</td>
         </tr>
       </tbody>
     </table>
