--- a/_layouts/workshops-detail.html
+++ b/_layouts/workshops-detail.html
@@ -33,7 +33,7 @@
                 <h1 class="mb-0 fs-1">{{page.title}}</h1>
                 <div class="d-flex flex-wrap gap-2 my-3 align-items-center">
                     <span class="badge text-bg-primary">{{page.level}}</span>
-                    <span class="badge bg-secondary">Room {{ page.order }}</span>
+                    <span class="badge bg-secondary">Room {{ page.room }}</span>
                 </div>
 
                 {{ content }}
