Place Martin's keynote to the correct room

--- a/_sass/_user-styles.scss
+++ b/_sass/_user-styles.scss
@@ -500,6 +500,10 @@ th {
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
+
+    &.extended {
+      -webkit-line-clamp: unset;
+    }
 }
 
 .break {
